# Ecowater-Hydrolink-HACS

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SENSORS.md  SENSOR_ANALYSIS.md  SENSOR_DISCOVERY.md  SENSOR_VERIFICATION.md  discover.py  discovery_output.json  example.yaml  hacs.json  info.md  pyproject.toml  pytest.ini  requirements_test.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: hacs.yaml  test.yaml  validate.yml
custom_components/: __init__.py
custom_components/hydrolink/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.py  services.yaml
custom_components/hydrolink/brands/: brand.json
custom_components/hydrolink/icons/: README.md
custom_components/hydrolink/translations/: en.json
discovery/: discover.py  discover_test.py  example_output.json
tests/: __init__.py  conftest.py  helpers.py  test_api.py  test_config_flow.py  test_coordinator.py  test_init.py  test_integration.py  test_sensor.py  test_services.py
